Fix dark mode transition. Fix Projects page functions. Add .dockerignore.

--- a/cmd/web/assets/css/dark-mode-switch.css
+++ b/cmd/web/assets/css/dark-mode-switch.css
@@ -82,3 +82,6 @@
     }
 }
 
+.no-transition, .no-transition * {
+    transition: none !important;
+}
